minimal start to hbase

--- a/TODO
+++ b/TODO
@@ -20,7 +20,7 @@ APP 1  BY Wednesday's class!!
 	
 	
 	HBase
-	-seed harness
+	-seed harness is a mess.  No idea what I'm doing haha
 	-test harness
 	
 	
