--- a/README
+++ b/README
@@ -4,12 +4,21 @@ for High-Volume Low-Contention Web Applications
 Yale University - CS 438
 Professor Daniel Abadi
 
-Bay Gross 			bay.gross@yale.edu
+Bay Gross 		bay.gross@yale.edu
 Charlie Croom 	charlie.croom@yale.edu
-Mike Levine			michael.levine@yale.edu
+Mike Levine		michael.levine@yale.edu
+
+--
 
 Abstract
 This paper investigates the relative performance of four representative database systems under the simulated workload of a modern class of web applications.  Specifically, we modeled our test suite on the expected high-volume low-contention workload behind many popular “read heavy” web applications such as Twitter, or Tumblr. The database systems tested were IBM’s DB2, PostgreSQL, HBase, and MongoDB, and each of these DBMS was installed “out of the box.”
 
 --
+
+Execution
+Edit config/db.yml to reflect the connection information for your DBMS once installed.  Seed data can be configured and installed via seeds/seedit.rb
+The test suite can be configured and run via tests/testit.rb
+
+--
+
 All code (for building the schema, generating and seeding the initial data, and executing the final test suite) is maintained and hosted online at GitHub. It can be accessed at the following URL. https://github.com/baygross/DB-Performance-Testing
